src/objects/FlexNoteQuestion__c.object
<CustomObject>
    <description>Contains Flex Note Questions and attributes.</description>
    <fields>
        <fullName>Access_Classification__c</fullName>
        <label>Access Classification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AnswerValues__c</fullName>
        <label>Answer Values</label>
        <length>4800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Answer_Type__c</fullName>
        <label>Data Type</label>
        <picklist>
            <picklistValues>
                <fullName>Picklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Text</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date/Time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TextArea</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MultiPicklist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Date</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Answer_Values__c</fullName>
        <label>Answer Values(delete)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Citizen_Web_Intake__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Citizen Web Intake</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code (not used)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FlexNote__c</fullName>
        <description>instead of this field use Question__c</description>
        <label>Flex Note</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hint_Text__c</fullName>
        <label>Hint Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsSecure__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsSecure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>List__c</fullName>
        <label>List</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionAlias__c</fullName>
        <label>Question Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <label>Question(delete)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Questions__c</fullName>
        <label>Question</label>
        <length>4800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SRJunctionCount__c</fullName>
        <label>SRJunctionCount</label>
        <summaryForeignKey>ServiceRequestTypeFlexNote__c.FlexNote_Question__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>SR_Intake_Entry_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SR Intake Entry Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SR_Mass_Entry_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SR Mass Entry Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SR_Resolution_Activity_Form__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SR Resolution Activity Form</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SR_Single_Work_Order_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SR Single Work Order Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SR_Summary_Report__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SR Summary Report</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Stop_Date__c</fullName>
        <label>Stop Date</label>
        <type>Date</type>
    </fields>
    <label>FlexNote Question</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Answer_Type__c</columns>
        <columns>Questions__c</columns>
        <columns>AnswerValues__c</columns>
        <columns>Required__c</columns>
        <columns>Citizen_Web_Intake__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SRJunctionCount__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LinkedQuestions</fullName>
        <columns>NAME</columns>
        <columns>Answer_Type__c</columns>
        <columns>Questions__c</columns>
        <columns>AnswerValues__c</columns>
        <columns>Required__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SRJunctionCount__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SRJunctionCount__c</field>
            <operation>notEqual</operation>
            <value>0</value>
        </filters>
        <label>Linked Questions</label>
    </listViews>
    <listViews>
        <fullName>OUC_DPW_Queue_FlexNoteQuestion</fullName>
        <filterScope>Queue</filterScope>
        <label>OUC DPW Queue</label>
        <queue>OUC_DPW_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Unlinked_Questions</fullName>
        <columns>NAME</columns>
        <columns>Answer_Type__c</columns>
        <columns>Questions__c</columns>
        <columns>AnswerValues__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>SRJunctionCount__c</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>SRJunctionCount__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Unlinked Questions</label>
    </listViews>
    <nameField>
        <label>Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FlexNote Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Enforce_Unique_FlexNote_Question_Code</fullName>
        <active>true</active>
        <description>Prohibit creation of duplicate FlexNote Question codes.  This is important for integration and Open311.</description>
        <errorConditionFormula>IF(ISNEW(), IF( UPPER(Name) == UPPER(VLOOKUP( $ObjectType.FlexNoteQuestion__c.Fields.Name , $ObjectType.FlexNoteQuestion__c.Fields.Name , Name)),true , false),AND(ISCHANGED(Name), IF( UPPER(Name) == UPPER(VLOOKUP($ObjectType.FlexNoteQuestion__c.Fields.Name,$ObjectType.FlexNoteQuestion__c.Fields.Name, Name)),true,false)))</errorConditionFormula>
        <errorMessage>FlexNote Question code cannot have duplicate value.</errorMessage>
    </validationRules>
</CustomObject>